Getting Ready to Create Decks

--- a/FlashCardPOC/Views/Shared/_Layout.cshtml
+++ b/FlashCardPOC/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                     <li>@Html.ActionLink("CreateCards", "Create", "FlashCards")</li>
                     <li>@Html.ActionLink("AnswerQuestions", "Quiz", "FlashCards")</li>
                     <li>@Html.ActionLink("ListCards", "List", "FlashCards")</li>
-                    <li>@Html.ActionLink("ViewPOCFront", "FrontOfCard", "FlashCards")</li>
+                    <li>@Html.ActionLink("CreateDeck", "CreateDeck", "FlashCards")</li>
                     <li>@Html.ActionLink("ViewPOCBack", "BackOfCard", "FlashCards")</li>
                     <li>@Html.ActionLink("IndexTest", "Index", "FlashCards")</li>
                 </ul>
