--- a/FlashCardPOC/Views/FlashCards/CreateDeck.cshtml
+++ b/FlashCardPOC/Views/FlashCards/CreateDeck.cshtml
@@ -1,7 +1,30 @@
-﻿
+﻿@model FlashCardPOC.Models.FlashCard
+
 @{
     ViewBag.Title = "View";
 }
 
-<h2>View</h2>
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
 
+<div class="form-horizontal">
+    <h4>Create A Deck</h4>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-group">
+        @Html.LabelFor(model => model.category, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.category, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.category, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="CreateDeck" class="btn btn-default" />
+        </div>
+    </div>
+
+</div>
+}
