--- a/FlashCardPOC/Views/FlashCards/CreateDeck.cshtml
+++ b/FlashCardPOC/Views/FlashCards/CreateDeck.cshtml
@@ -1,7 +1,7 @@
 ﻿@model FlashCardPOC.Models.FlashCard
 
 @{
-    ViewBag.Title = "View";
+    ViewBag.Title = "CreateDeck";
 }
 
 @using (Html.BeginForm())
