--- a/FlashCardPOC/Views/FlashCards/Index.cshtml
+++ b/FlashCardPOC/Views/FlashCards/Index.cshtml
@@ -1,7 +1,6 @@
-﻿@model IEnumerable<FlashCardPOC.Models.FlashCard>
+﻿@model FlashCardPOC.Models.FlashCard
 
 @{
     ViewBag.Title = "Index";
 }
 
-<h2>Home Page</h2>
