--- a/FlashCardPOC/Views/FlashCards/Quiz.cshtml
+++ b/FlashCardPOC/Views/FlashCards/Quiz.cshtml
@@ -21,6 +21,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Answer", "BackOfCard", new { id = Model.ID})
+    @Html.ActionLink("Answer", "BackOfCard", new { category = Model.category, id = Model.ID})
     @Html.ActionLink("Back to List", "Index")
 </p>
