--- a/FlashCardPOC/Views/Shared/_Layout.cshtml
+++ b/FlashCardPOC/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <li>@Html.ActionLink("CreateDeck", "CreateDeck", "FlashCards")</li>
                     <li>@Html.ActionLink("ViewPOCBack", "BackOfCard", "FlashCards")</li>
                     <li>@Html.ActionLink("IndexTest", "Index", "FlashCards")</li>
+                    <li>@Html.ActionLink("ChooseCategory", "ChooseCategory", "FlashCards")</li>
                 </ul>
             </div>
         </div>
