--- a/FlashCardPOC/Views/FlashCards/InCorrect.cshtml
+++ b/FlashCardPOC/Views/FlashCards/InCorrect.cshtml
@@ -77,6 +77,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Next Question", "Quiz", new { id = Model.ID + 1 }) |
+    @Html.ActionLink("Next Question", "Quiz", new { category = Model.category, id = Model.ID + 1 }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
